objects/EUR_CRM_Survey__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Surveys (EU)</relationshipLabel>
        <relationshipName>Surveys</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Meant as flag to indicate whether a Visit Survey must be created for this Survey. If TRUE, Visit Survey(s) should be  created. If FALSE, Visit Surveys should not be created.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Cancelled_Date__c</fullName>
        <label>Cancelled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EUR_CRM_Survey_Header__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey Header</label>
        <referenceTo>EUR_CRM_Survey_Header__c</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Valid_From__c</fullName>
        <formula>EUR_CRM_Survey_Header__r.EUR_CRM_Valid_From__c</formula>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Valid_Until__c</fullName>
        <formula>EUR_CRM_Survey_Header__r.EUR_CRM_Valid_Until__c</formula>
        <label>Valid Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipName>Surveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey (EU)</label>
    <listViews>
        <fullName>All_ZA_Surveys</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Survey_Header__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey__c.EUR_ZA_Survey</value>
        </filters>
        <label>All ZA Surveys</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_ZA_Surveys_SCCatman</fullName>
        <booleanFilter>1 AND 2</booleanFilter>
        <columns>NAME</columns>
        <columns>EUR_CRM_Survey_Header__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey__c.EUR_ZA_Survey</value>
        </filters>
        <filters>
            <field>EUR_CRM_Survey_Header__c</field>
            <operation>equals</operation>
            <value>Shoprite Checkers CATMAN audit</value>
        </filters>
        <label>All ZA Surveys Shoprite Checkers CATMAN</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_ZA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_BE_Surveys</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Active__c</columns>
        <columns>EUR_CRM_Survey_Header__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Survey__c.EUR_BE_Survey</value>
        </filters>
        <label>All BE Surveys</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SVY-{000000}</displayFormat>
        <label>Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Survey</fullName>
        <active>true</active>
        <label>EUR BE Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_BG_Survey</fullName>
        <active>true</active>
        <label>EUR BG Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DE_Survey</fullName>
        <active>true</active>
        <label>DE Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Survey</fullName>
        <active>true</active>
        <description>Record Type for DK Surveys</description>
        <label>EUR DK Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_FI_Survey</fullName>
        <active>true</active>
        <label>EUR FI Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Survey</fullName>
        <active>true</active>
        <label>EUR RU Survey</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_ZA_Survey</fullName>
        <active>true</active>
        <label>EUR ZA Survey</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>